--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "CoverCHILD"
+name: CoverCHILD
 output_dir: ../docs
 navbar:
-  title: "CoverCHILD"
+  title: CoverCHILD
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fab fa-github
+    text: Source code
+    href: https://github.com/simeonplatte/CoverCHILD
 output:
   workflowr::wflow_html:
     toc: yes
