Add factor order for case_state (for stationär > ... > ambulant). Update ICD categories. Add versions of glue_collapse, min, max which return NA if all elements are NA.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.bashrc
+.nuvolos/*
 .Rproj.user
 .Rhistory
 .RData
@@ -12,5 +14,6 @@ analysis/*png
 analysis/*html
 analysis/*_cache
 analysis/site_libs
+archive/*
 data/*
 output/*
