Add POST option for custom fhircrackr functions and config.

--- a/config/EXAMPLE_fhir_cfg.yml
+++ b/config/EXAMPLE_fhir_cfg.yml
@@ -2,6 +2,7 @@
 default:
   # general behavior ---------------------------------------------------------------------------------------------------
   do_search: true
+  use_post: true
   get_all_elements: false
   keep_all_elements: false
   n_cores: 12
