FHIR ETL: Add batch processing of bundles for Encounter search.

--- a/config/EXAMPLE_fhir_cfg.yml
+++ b/config/EXAMPLE_fhir_cfg.yml
@@ -6,12 +6,13 @@ default:
   get_all_elements: false
   keep_all_elements: false
   n_cores: 12
-  max_bundles: 10 # limit value for testing/debugging, else use .inf
-  max_bundle_size: 100 # set max. bundle size using _count parameter in FHIR search, e.g. 1000
+  max_bundles: 100 # limit value for testing/debugging, else use .inf
+  max_bundle_size: 1000 # set max. bundle size using _count parameter in FHIR search, e.g. 1000
   
   save_to_disc: false #TODO: not yet implemented, has to be false for now.
   log_dir: 'logs' # directory for logfiles
   tmp_dir: 'tmp' # directory to store downloaded bundles / intermediate results, if applicable
+  clear_tmp_dir: true # clear downloaded bundles from tmp_dir after running the script
   
   # server settings ----------------------------------------------------------------------------------------------------
 #  hospital_name: 'UKDD'
