--- a/config/EXAMPLE_fhir_cfg.yml
+++ b/config/EXAMPLE_fhir_cfg.yml
@@ -90,6 +90,14 @@ default:
     encounter:
       subject.reference: null
 
+  # set custom reference prefix, default = "Patient/" & "Encounter/"
+  subject_reference_prefix:   ''
+  encounter_reference_prefix: ''
+
+  # custom parameters for conditions resources on local fhir server
+  # use 'http://fhir.de/CodeSystem/dimdi/icd-10-gm' or 'http://fhir.de/CodeSystem/bfarm/icd-10-gm'
+  icd_code_system:            'http://fhir.de/CodeSystem/bfarm/icd-10-gm'
+  
   # Separator and brackets for separating multiple entries within a single Dataframe cell before
   # unnesting. Only need to be changed in unlikely cases that the pre-set separator or brackets
   # are part of an element. type: string
